{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 342,
  "lineage": "9bc8418c-9517-237c-641d-1578d1860905",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:413800980726:instance/i-015f5249d32031261",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015f5249d32031261",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "osiav1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a91538c0ea41cc84",
            "private_dns": "ip-10-0-1-143.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-13-201-10-33.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.10.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a2b16e332a82b673",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074580b236e962ee7",
            "tags": {
              "Name": "osiav1-bastion"
            },
            "tags_all": {
              "Name": "osiav1-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4b685bab72df02b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "osiav1-ec2-1-0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:413800980726:instance/i-05c24bacb45786f7f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c24bacb45786f7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "osiav1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af77ed2ca35fa060",
            "private_dns": "ip-10-0-3-22.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-065344adc160cf3a0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4744ff622874891",
            "tags": {
              "Name": "osiav1-ec2-1",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "osiav1-ec2-1",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0533b0c1e9f0d4e1b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_key_pair.this",
            "module.ec2.tls_private_key.this",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "osiav1-ec2-2-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:413800980726:instance/i-04a3fa27e68d1f7b9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a3fa27e68d1f7b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "osiav1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0436d1f81a39a52d2",
            "private_dns": "ip-10-0-4-214.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e9f2115a7f7001dc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082ebc0aad24820eb",
            "tags": {
              "Name": "osiav1-ec2-2",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "osiav1-ec2-2",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0533b0c1e9f0d4e1b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_key_pair.this",
            "module.ec2.tls_private_key.this",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:security-group/sg-0c4b685bab72df02b",
            "description": "Allow SSH from my public IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4b685bab72df02b",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.135.62.208/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "413800980726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "bastion-sg",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "timeouts": null,
            "vpc_id": "vpc-024dff215f143950f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "db-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:security-group/sg-00a62b801f5579ac3",
            "description": "Allow MySQL only from web SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a62b801f5579ac3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0533b0c1e9f0d4e1b",
                  "sg-0eadc8e661ea8c7cc"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "413800980726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "db-sg",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "timeouts": null,
            "vpc_id": "vpc-024dff215f143950f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-ec2-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:security-group/sg-0533b0c1e9f0d4e1b",
            "description": "Allow all traffic from DB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0533b0c1e9f0d4e1b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-00a62b801f5579ac3"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c4b685bab72df02b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-ec2-sg",
            "name_prefix": "",
            "owner_id": "413800980726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-ec2-sg",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "private-ec2-sg",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "timeouts": null,
            "vpc_id": "vpc-024dff215f143950f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:security-group/sg-0eadc8e661ea8c7cc",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eadc8e661ea8c7cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "413800980726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "web-sg",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "timeouts": null,
            "vpc_id": "vpc-024dff215f143950f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-sg-2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3433847232",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c4b685bab72df02b",
            "security_group_rule_id": "sgr-0add49cb442b61ac2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "db-sg-1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3211067767",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00a62b801f5579ac3",
            "security_group_rule_id": "sgr-05212520332dad863",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-ec2-sg-3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4222586182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0533b0c1e9f0d4e1b",
            "security_group_rule_id": "sgr-02fedbd548a62e4e0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-sg-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-949034738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eadc8e661ea8c7cc",
            "security_group_rule_id": "sgr-05d3426f622729061",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-sg-5",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "103.135.62.208/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3645864078",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c4b685bab72df02b",
            "security_group_rule_id": "sgr-0d5ff367653f70991",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "db-sg-3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1314348240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00a62b801f5579ac3",
            "security_group_rule_id": "sgr-088ee5fdc4a13a5cd",
            "self": false,
            "source_security_group_id": "sg-0eadc8e661ea8c7cc",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "db-sg-4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2857132302",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00a62b801f5579ac3",
            "security_group_rule_id": "sgr-04deb6a5bf020fa57",
            "self": false,
            "source_security_group_id": "sg-0533b0c1e9f0d4e1b",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-ec2-sg-6",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-94189250",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0533b0c1e9f0d4e1b",
            "security_group_rule_id": "sgr-0e32d79f5ed29f382",
            "self": false,
            "source_security_group_id": "sg-00a62b801f5579ac3",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-ec2-sg-7",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-4139066867",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0533b0c1e9f0d4e1b",
            "security_group_rule_id": "sgr-06e1b77dfe664f977",
            "self": false,
            "source_security_group_id": "sg-0c4b685bab72df02b",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-sg-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2156780427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eadc8e661ea8c7cc",
            "security_group_rule_id": "sgr-0fab7f1514c3e1260",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-sg-1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-906462782",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eadc8e661ea8c7cc",
            "security_group_rule_id": "sgr-0137321784e2cfba7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-sg-2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3812452765",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eadc8e661ea8c7cc",
            "security_group_rule_id": "sgr-042ff93ff31b83729",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0794b7de313c9e589",
            "arn": "arn:aws:ec2:ap-south-1:413800980726:elastic-ip/eipalloc-0794b7de313c9e589",
            "association_id": "eipassoc-008d4b0554249c363",
            "domain": "vpc",
            "id": "eipalloc-0794b7de313c9e589",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0d4265321415e3f86",
            "private_dns": "ip-10-0-1-177.ap-south-1.compute.internal",
            "private_ip": "10.0.1.177",
            "public_dns": "ec2-13-234-70-149.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.70.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "osiav1-vpc-nat",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "osiav1-vpc-nat",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:internet-gateway/igw-0c7ff9204258466c7",
            "id": "igw-0c7ff9204258466c7",
            "owner_id": "413800980726",
            "tags": {
              "Name": "osiav1-vpc-igw",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "osiav1-vpc-igw",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "vpc_id": "vpc-024dff215f143950f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0794b7de313c9e589",
            "association_id": "eipassoc-008d4b0554249c363",
            "connectivity_type": "public",
            "id": "nat-0f75218dbb36ff275",
            "network_interface_id": "eni-0d4265321415e3f86",
            "private_ip": "10.0.1.177",
            "public_ip": "13.234.70.149",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-074580b236e962ee7",
            "tags": {
              "Name": "osiav1-vpc-nat",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "osiav1-vpc-nat",
              "Owner": "Random",
              "Project": "osiav1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-026dd66cb21fc78181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f75218dbb36ff275",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-026dd66cb21fc7818",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c7ff9204258466c7",
            "id": "r-rtb-0baf4c20cdf19dfc31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0baf4c20cdf19dfc3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:route-table/rtb-026dd66cb21fc7818",
            "id": "rtb-026dd66cb21fc7818",
            "owner_id": "413800980726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f75218dbb36ff275",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "osiav1-vpc-private-rt",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "osiav1-vpc-private-rt",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "timeouts": null,
            "vpc_id": "vpc-024dff215f143950f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:route-table/rtb-0baf4c20cdf19dfc3",
            "id": "rtb-0baf4c20cdf19dfc3",
            "owner_id": "413800980726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7ff9204258466c7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "osiav1-vpc-public-rt",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "osiav1-vpc-public-rt",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "timeouts": null,
            "vpc_id": "vpc-024dff215f143950f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bf2bf6dd34bb25b",
            "route_table_id": "rtb-026dd66cb21fc7818",
            "subnet_id": "subnet-0e4744ff622874891"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b74e661e982dd267",
            "route_table_id": "rtb-026dd66cb21fc7818",
            "subnet_id": "subnet-082ebc0aad24820eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027eea6283609ec1a",
            "route_table_id": "rtb-0baf4c20cdf19dfc3",
            "subnet_id": "subnet-074580b236e962ee7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe385c1aa7d82bf9",
            "route_table_id": "rtb-0baf4c20cdf19dfc3",
            "subnet_id": "subnet-0cffee818a335c60f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:subnet/subnet-0e4744ff622874891",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4744ff622874891",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "413800980726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "osiav1-vpc-private-1",
              "Owner": "Random",
              "Project": "osiav1",
              "Type": "private"
            },
            "tags_all": {
              "Name": "osiav1-vpc-private-1",
              "Owner": "Random",
              "Project": "osiav1",
              "Type": "private"
            },
            "vpc_id": "vpc-024dff215f143950f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:subnet/subnet-082ebc0aad24820eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082ebc0aad24820eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "413800980726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "osiav1-vpc-private-2",
              "Owner": "Random",
              "Project": "osiav1",
              "Type": "private"
            },
            "tags_all": {
              "Name": "osiav1-vpc-private-2",
              "Owner": "Random",
              "Project": "osiav1",
              "Type": "private"
            },
            "vpc_id": "vpc-024dff215f143950f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:subnet/subnet-074580b236e962ee7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074580b236e962ee7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413800980726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "osiav1-vpc-public-1",
              "Owner": "Random",
              "Project": "osiav1",
              "Type": "public"
            },
            "tags_all": {
              "Name": "osiav1-vpc-public-1",
              "Owner": "Random",
              "Project": "osiav1",
              "Type": "public"
            },
            "vpc_id": "vpc-024dff215f143950f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:subnet/subnet-0cffee818a335c60f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cffee818a335c60f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413800980726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "osiav1-vpc-public-2",
              "Owner": "Random",
              "Project": "osiav1",
              "Type": "public"
            },
            "tags_all": {
              "Name": "osiav1-vpc-public-2",
              "Owner": "Random",
              "Project": "osiav1",
              "Type": "public"
            },
            "vpc_id": "vpc-024dff215f143950f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413800980726:vpc/vpc-024dff215f143950f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c43ca911ec91bbdf",
            "default_route_table_id": "rtb-0a1fc61307b1dfce7",
            "default_security_group_id": "sg-0f84428aba0cc587b",
            "dhcp_options_id": "dopt-093e95742d9e766e6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024dff215f143950f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a1fc61307b1dfce7",
            "owner_id": "413800980726",
            "tags": {
              "Name": "osiav1-vpc",
              "Owner": "Random",
              "Project": "osiav1"
            },
            "tags_all": {
              "Name": "osiav1-vpc",
              "Owner": "Random",
              "Project": "osiav1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}